--- a/matplotlib.ipynb
+++ b/matplotlib.ipynb
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -116,19 +116,16 @@
     "\n",
     "bars = plt.bar(labels, values)\n",
     "\n",
-    "bars[0].set_hatch(\"/\")\n",
-    "\n",
-    "bars[1].set_hatch(\"O\")\n",
-    "\n",
-    "bars[2].set_hatch(\"*\")\n",
-    "\n",
-    "plt.show()\n",
+    "# bars[0].set_hatch(\"/\")\n",
+    "# bars[1].set_hatch(\"O\")\n",
+    "# bars[2].set_hatch(\"*\")\n",
+    "# plt.show()\n",
     "\n",
     "# OR\n",
     "\n",
     "patterns = [\"/\",\"O\",\"*\"]\n",
     "for bar in bars:\n",
-    "    bar.set_hatch(patterns.pop())\n",
+    "    bar.set_hatch(patterns.pop(0))\n",
     "\n",
     "plt.show()"
    ]
